--- a/app/views/phone_numbers/_form.html.erb
+++ b/app/views/phone_numbers/_form.html.erb
@@ -15,7 +15,7 @@
     <%= f.label :number %><br />
     <%= f.text_field :number %>
   </div>
-  <div class="field">
+  <div class="field" style="display: none;">
     <%= f.label :person_id %><br />
     <%= f.number_field :person_id %>
   </div>
