--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -22,6 +22,7 @@
 <ul>
   <% @person.email_addresses.each do |email_address| %>
     <li><%= email_address.address %>
+      <%= link_to('edit', edit_email_address_path(email_address)) %>
     </li>
   <% end %>
 </ul>
