--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -12,7 +12,7 @@
 
 <ul>
   <% @person.phone_numbers.each do |phone| %>
-    <li><%= phone.number %> 
+    <li><%= phone.number %>
     	<%= link_to('edit', edit_phone_number_path(phone)) %>
     	<%= link_to 'delete', phone_number_path(phone), method: :delete %>
     </li>
@@ -29,6 +29,6 @@
 </ul>
 
 <%= link_to 'Add email address', new_email_address_path(person_id: @person.id) %> |
-<%= link_to 'Add phone number', new_phone_number_path(person_id: @person.id) %> |
+<%= link_to 'Add phone number', new_phone_number_path(contact_id: @person.id) %> |
 <%= link_to 'Edit', edit_person_path(@person) %> |
 <%= link_to 'Back', people_path %>
