--- a/app/views/phone_numbers/_form.html.erb
+++ b/app/views/phone_numbers/_form.html.erb
@@ -16,8 +16,8 @@
     <%= f.text_field :number %>
   </div>
   <div class="field" style="display: none;">
-    <%= f.label :person_id %><br />
-    <%= f.number_field :person_id %>
+    <%= f.label :contact_id %><br />
+    <%= f.number_field :contact_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
