adds contact-type to show, form, and person_view

--- a/app/views/phone_numbers/_form.html.erb
+++ b/app/views/phone_numbers/_form.html.erb
@@ -19,6 +19,10 @@
     <%= f.label :contact_id %><br />
     <%= f.number_field :contact_id %>
   </div>
+  <div class="field" style="display: none;">
+    <%= f.label :contact_type %><br />
+    <%= f.number_field :contact_type %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
