--- a/app/views/email_addresses/_form.html.erb
+++ b/app/views/email_addresses/_form.html.erb
@@ -16,8 +16,12 @@
     <%= f.text_field :address %>
   </div>
   <div class="field" style="display: none;">
-    <%= f.label :person_id %><br />
-    <%= f.number_field :person_id %>
+    <%= f.label :contact_id %><br />
+    <%= f.number_field :contact_id %>
+  </div>
+  <div class="field" style="display: none;">
+    <%= f.label :contact_type %><br />
+    <%= f.number_field :contact_type %>
   </div>
   <div class="actions">
     <%= f.submit %>
